overlays/argo_rollouts_nginx_canary_v2/canary_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prod
  name: canary
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 8080
  selector:
    app: prod
  type: ClusterIP
